<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:background="@drawable/sign_in_finger2"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <ImageView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/layout_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="220dp"
        app:cardBackgroundColor="#abacb6be">

        <LinearLayout
            android:orientation="vertical"


            android:padding="30dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/layout_input"
                android:layout_centerHorizontal="true"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:layout_marginTop="30dp"
                android:hint="@string/usernamehint" />
            <EditText
                android:id="@+id/userpassword"
                android:hint="@string/userpasshint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/login"
                android:layout_marginTop="40dp"
                android:background="@drawable/gradient_login_button_background"
                android:text="@string/login"
                android:textColor="#FFF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </android.support.v7.widget.CardView>


    <ImageView
        android:id="@+id/logosignin"
        android:layout_marginTop="40dp"
        android:src="@drawable/logo_about"
        android:layout_centerHorizontal="true"
        android:layout_width="120dp"
        android:layout_height="120dp" />

    <ImageView
        android:id="@+id/signup"
        android:layout_below="@+id/logosignin"
        android:layout_centerHorizontal="true"
        android:src="@drawable/sign_in_tras"
        android:layout_width="80dp"
        android:layout_height="40dp" />
    <TextView
        android:id="@+id/register"
        android:textColor="@android:color/black"
        android:text="@string/signuptext"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/forgot"
        android:textColor="@android:color/black"
        android:text="@string/forgotpass"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="30dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</RelativeLayout>