<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <TextView
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/enter_title"
            android:singleLine="true"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <EditText
                android:id="@+id/note_title"
                android:layout_marginStart="10dp"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:inputType="text"
                android:maxLines="1"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/enter_your_title_here"/>

            <ImageView
                android:src="@drawable/pen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/note_content"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:hint="@string/start_typing_your_text_here"
            android:background="@drawable/white_edit_text"/>

    </RelativeLayout>




</LinearLayout>