<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparentColor"
    tools:context="com.meeting.binary.android.binarymeeting.profile.EditiProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="415dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@android:drawable/screen_background_light_transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/screen_background_light_transparent"
            android:orientation="vertical"
            android:weightSum="5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_name"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="enter your name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edit_contact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="enter your contact" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_email"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="enter your email"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_website"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edit_website"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="enter your website" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edit_compagnie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="enter your compagnie name" />
            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>
</RelativeLayout>
