<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.meeting.binary.android.binarymeeting.contact.AddContactActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="450dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:orientation="vertical"
            android:background="@drawable/gradient_profile_background">
            <ImageView
                android:id="@+id/add_contact_img"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/circlewhitebutton"
                android:padding="15dp"
                android:src="@drawable/ic_add_a_photo_black_24dp" />
        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="300dp"
            android:layout_height="320dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="220dp"
            android:layout_marginStart="25dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_name"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/add_contact_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="0dp"
                        android:hint="enter your contact name" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/add_contact_contact"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="0dp"
                        android:hint="enter his phone number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/add_contact_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"
                        android:layout_marginBottom="0dp"
                        android:hint="enter his email address" />
                </LinearLayout>


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/save_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/save"
            android:background="@drawable/circlewhitebutton"
            android:layout_margin="20dp"
            />
    </RelativeLayout>



</LinearLayout>